# proofshot

./: .gitattributes  .gitignore  .mcp.json  .npmignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-entrypoint.sh  package-lock.json  package.json  pyproject.toml  requirements-dev.txt
.claude-plugin/: marketplace.json  plugin.json
.cliproof/: guard-ok.cliproof.txt  proof.json  redact.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/actions/cliproof-check/: action.yml
.github/codeql/: codeql-config.yml
.github/workflows/: auto-approve.yml  ci.yml  codeql.yml  docker.yml  freshness.yml  integration.yml  publish.yml  release.yml
cliproof/: __init__.py  _api.py  _dispatch.py  _types.py
docs/superpowers/plans/: 2026-06-10-m1-kernel-and-quality.md  2026-06-10-m2-transport-surfaces.md
docs/superpowers/specs/: 2026-06-10-integration-distribution-design.md
skills/cliproof/: SKILL.md
skills/cliproof/assets/: demo.tape.template
skills/cliproof/references/: security.md  (+1 more)
skills/proofshot/: SKILL.md
test/: cli.test.js
tests/: conftest.py  test_annotate.py  test_capture.py  test_check.py  test_embed.py  test_guard.py  test_health.py  test_kernel.py  test_manifests.py  test_mcp_server.py  test_no_dependencies.py  test_normalize.py  test_pr.py  test_preflight.py  test_pypackage.py  test_rasterize.py  test_redact.py  test_redact_policy.py  test_serve.py  test_storyboard.py  test_suggest.py  test_verify.py
(+31 files in other folders)
