[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cliproof"
version = "0.3.0"
description = "Your README should show it works — not just say it."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["terminal", "screenshot", "cli", "readme", "documentation", "developer-tools"]
authors = [{name = "aks-builds"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.setuptools.packages.find]
include = ["cliproof*"]

[tool.setuptools.package-data]
cliproof = ["py.typed"]
